# Telco-Churn-Prediction-ML-Classification

./: experiments.ipynb  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt
frontend/: app.py  model.joblib  model.py  requirements.txt
