[project]
name = "tele-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "uvicorn>=0.36.0",
    "xgboost>=3.0.5",
]
